--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title> Test site </title>
   </head>
   <body>
+    <a href = "css_demo.html">This is a link to the demo file</a>
     <h1>Test Site</h1>
     <p>Hello World</p>
     <h3>Isaac Song</h3>
