--- a/font_sample.html
+++ b/font_sample.html
@@ -12,13 +12,14 @@
       }
       
       h3 {
-        font-family:  font-family: 'Titillium Web', sans-serif;
+        font-family: 'Oswald', sans-serif;
+
       }
       
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@1,500&family=Roboto+Mono:wght@200&family=Titillium+Web&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@1,500&family=Oswald:wght@200&family=Roboto+Mono:wght@200&display=swap" rel="stylesheet"
   </head>
   
   <body>
