--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     <a href = "css_demo.html">This is a link to the demo file</a>
     <a href = "font_sample.html">This is a link to the font sample</a>
+    <a href = "bootstrap-sample.html">This is a link to the font sample</a>
     <h1>Test Site</h1>
     <p>Hello World</p>
     <h3>Isaac Song</h3>
