--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -11,7 +11,17 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+        <div class="col">
+          One of three columns
+        </div>
+        <div class="col">
+          One of three columns
+        </div>
+        <div class="col">
+          One of three columns
+        </div>
+      </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
