--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -11,14 +11,14 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <div class="container">
-        <div class="col">
+    <div class="container-fluid">
+        <div class="col-md">
           One of three columns
         </div>
-        <div class="col">
+        <div class="col-md">
           One of three columns
         </div>
-        <div class="col">
+        <div class="col-md">
           One of three columns
         </div>
       </div>
