--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -12,13 +12,13 @@
   </head>
   <body>
     <div class="container-fluid">
-        <div class="col-md">
+        <div class="col-md-3">
           One of three columns
         </div>
-        <div class="col-md">
+        <div class="col-md-3">
           One of three columns
         </div>
-        <div class="col-md">
+        <div class="col-md-3">
           One of three columns
         </div>
       </div>
