--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <div class="container-fluid">
+      <div class = "row" >
         <div class="col-md-3">
           One of three columns
         </div>
@@ -21,6 +22,7 @@
         <div class="col-md-3">
           One of three columns
         </div>
+      </div>
       </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
