--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>Test Site</h1>
     <p>Hello World</p>
     <h3>Isaac Song</h3>
+
+    <p> this is some text that I added locally </p>
   </body>
   
   
